--- a/.github/workflows/fun.yml
+++ b/.github/workflows/fun.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           git config user.name  "life-bot"
           git config user.email "bot@localhost"
-          git commit -am "daily fun tick"
-          git push
+          git commit -am "daily fun tick" || echo "No changes"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
